--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@ body {
   margin: 0;
   font-size: 1.5em;
   text-align: center;
-  background-color: #0d0438;
+  background-color: #23156b;
   color: #fff;
 }
