--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .App {
   max-width: 860px;
-  margin: 40px auto;
+  margin: 20px auto;
 }
 
 button {
-  background: none;
-  border: 2px solid #fff;
+  background: green;
+  border: 2px solid rgb(252, 238, 46);
   padding: 6px 12px;
   border-radius: 4px;
-  color: #fff;
+  color: rgb(252, 238, 46);
   font-weight: bold;
   cursor: bold;
   font-size: 1em;
@@ -16,13 +16,23 @@ button {
 }
 
 button:hover {
-  background-color: #319c78;
+  background-color: #5222c2;
   color: #fff;
+  border: 2px solid #fff
 }
 
 .card-grid {
-  margin: 40px auto;
+  margin: 20px auto;
   display: grid;
   grid-template-columns: auto auto auto auto;
   grid-gap: 20px
+}
+
+
+p {
+  display: inline;
+  background-color: green;
+  font-weight: 900;
+  border-radius: 4px;
+  padding: 2px 8px
 }
