--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -7,6 +7,7 @@
     display: block;
     border: 2px solid #fff;
     background-repeat: 6px;
+    box-shadow: 1px -36px 26px -32px rgba(0, 0, 0, 1)
 }
 
 /* front-picture */
